# spark-bestfit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  index.rst  quickstart.rst
examples/: api_demo.ipynb  basic_usage.py  discrete_demo.ipynb  large_dataset.py  quickstart.ipynb
scripts/: validate_examples.py
src/spark_bestfit/: __init__.py  core.py  discrete_fitting.py  distributions.py  fitting.py  histogram.py  plotting.py  results.py  utils.py
tests/: __init__.py  conftest.py  test_core.py  test_discrete_fitting.py  test_distributions.py  test_fitting.py  test_histogram.py  test_performance.py  test_plotting.py  test_results.py  test_utils.py
